--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
+  "homepage": "https://yutakaki.github.io/popcorn-time2",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
